Bug 72129 - OpenANSIFIleDesc on Mac won't create new files.r=beard@netscape.com, sr=sfraser@netscape.com